@@ -47,6 +47,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #1655: Make imaplib IPv6-capable. Patch by Derek Morr.
+
 - Issue #1664: Make nntplib IPv6-capable. Patch by Derek Morr.
 
 - Issue #5971: StreamHandler.handleError now swallows IOErrors which occur when
